dashboard/src/main/fabric8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
